--- a/prize_distribution_game_notebook.ipynb
+++ b/prize_distribution_game_notebook.ipynb
@@ -222,7 +222,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Nota:</b> As we can see in the <i>2nd Example</i>, there is the possibility to use only one attempt in the first level and then proceed to the next level."
+    "<b>Note:</b> As we can see in the <i>2nd Example</i>, there is the possibility to use only one attempt in the first level and then proceed to the next level."
    ]
   },
   {
